# bsllmner-viewer

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  env.dev  gap-discovery.yml  pyproject.toml
docs/: data-model.md  etl.md  ui.md
scripts/: _http_cache.py  build_ontology_subsets.sh  declare_owl_class.rq  enrich_samples_with_srx.py  fetch_chip_atlas_experiment_list.py  fetch_ontology_owls.py  fetch_sra_accessions.py  playwright_smoke.py
src/bsllmner_viewer/etl/: __main__.py  build_aggregates.py  build_facts.py  build_ontology.py  build_runs.py  build_samples.py  build_srx_links.py  cli.py  load_chip_atlas.py  load_input.py  load_owl.py  load_select.py  load_sra_accessions.py  organism.py  seq_type.py  sources.py  term_id.py  types.py
src/bsllmner_viewer/lib/: aggregation.py  chip_atlas.py  duckdb.py  ontology.py
src/bsllmner_viewer/ui/: Home.py  _conn.py  _filters.py  _term_popover.py
src/bsllmner_viewer/ui/pages/: 01_Gap_Discovery.py  02_Cohort.py  03_Gapminder.py  04_Curation.py
tests/fixture/: bs_entries_chipatlas_minimal.jsonl  bs_entries_rnaseq_minimal.jsonl  mondo_tiny.owl  select_minimal.json
tests/pbt/etl/: test_facts_invariants.py  test_ontology_depth.py
tests/pbt/lib/: conftest.py  test_agg_parity.py
tests/unit/: test_smoke.py
tests/unit/etl/: conftest.py  test_build_facts.py  test_build_ontology_restrict.py  test_build_samples.py  test_build_srx_links.py  test_load_chip_atlas.py  test_load_input.py  test_load_owl.py  test_load_select.py  test_load_sra_accessions.py  test_organism.py  test_seq_type.py  test_term_id.py
tests/unit/lib/: conftest.py  test_aggregation.py  test_aggregation_srx.py  test_build_aggregates.py  test_chip_atlas.py  test_duckdb.py  test_ontology.py
