[project]
name = "bsllmner-viewer"
version = "0.0.0"
description = "Viewer for bsllmner-mk2 BioSample x ontology mapping results (Streamlit + DuckDB)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Hirotaka Suetake", email = "suecharo@sator.co.jp" },
]
dependencies = [
    "duckdb>=1.1.0",
    "ijson>=3.5.0",
    "lxml>=6.1.1",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.0",
    "streamlit>=1.39.0",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.115.0",
    "lxml-stubs>=0.5.1",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bsllmner_viewer"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
# 日本語コメント・docstring 内の全角句読点を許可する (RUF001-003)
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Streamlit の page module 命名規約 (Home.py / 1_Some_Page.py) は N999 に引っかかる
"src/bsllmner_viewer/ui/**/*.py" = ["N999"]
# typer の Option default に関数呼び出しを置くのは慣用句
"src/bsllmner_viewer/etl/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]

[[tool.mypy.overrides]]
module = [
    "ijson", "ijson.*",
    "pyarrow", "pyarrow.*",
    "pandas", "pandas.*",
    "plotly", "plotly.*",
]
ignore_missing_imports = true

# pyarrow に型情報がないので write_table 等の untyped call を許す
[[tool.mypy.overrides]]
module = [
    "bsllmner_viewer.etl.build_runs",
    "bsllmner_viewer.etl.build_samples",
    "bsllmner_viewer.etl.build_facts",
    "bsllmner_viewer.etl.build_ontology",
]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
